--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
+    "@iconify-json/material-symbols": "^1.2.31",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/ph": "^1.2.2",
     "@nuxt/devtools": "^2.4.1",
     "@nuxt/eslint": "^1.3.1",
