--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.18",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.26.0",
