--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.18",
     "@typescript-eslint/parser": "^8.32.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.4.0",
     "nuxt": "^3.17.3",
+    "postcss": "^8.5.6",
     "postcss-import": "^16.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3",
     "typescript": "5.8.3"
   },
   "dependencies": {
