--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/eslint-config": "^1.3.1",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "1.10.0",
+    "@nuxt/scripts": "^0.11.13",
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
@@ -35,6 +36,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.18",
     "@typescript-eslint/parser": "^8.32.1",
+    "@unhead/vue": "^2.0.14",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-nuxt": "^4.0.0",
